MyDevOrg/src/objects/Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <label>Account Address</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marketing_Target__c</fullName>
        <label>Marketing Target</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Comments__c</fullName>
        <label>Notes &amp; Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <label>Primary Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>